# visocode

./: .env.example  .gitignore  README.md  pyproject.toml
locale/: translation-example.pot
locale/de/LC_MESSAGES/: translation-example.po
manim/: main.py  manim.cfg
manim/processing/: export.vpy  subtitles.py
research/latex/: main.fdb_latexmk  main.fls  main.tex  preamble.tex
research/research_agent/: adapter.py  arxiv_tool.py  askclarification_tool.py  calc_tool.py  code_analysis_tool.py  enhanced_final_answer_tool.py  gradio_app.py  icon_generation_tool.py  icon_generation_tool_modelscope.py  local_pdf_rag_tool.py  main.py  multi_tool_agent.py  multi_tool_agent_whileversion.py  rag_test.py
research/research_agent/output/: latest_explanation.json
