[project]
name = "visocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6,<3.12"
dependencies = [
    "manim>=0.19.0",
    "manim-voiceover-fixed[elevenlabs,gtts,transcribe]>=0.3.10",
    "numba>=0.61.2",
    "setuptools<81",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
