[project]
name = "visocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6,<3.12"
dependencies = [
    "gradio>=5.40.0",
    "manim>=0.19.0",
    "manim-themes>=0.1.3",
    "manim-voiceover-plus[elevenlabs,gtts,transcribe,translate]==0.6.8",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "openai>=1.98.0",
    "setuptools<81",
    "smolagents>=1.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
